New abstract class to define DImg loader settings widget implementations. The goal is to move all loader settings widgets to DImg plugins and create new ones easily.

--- a/core/libs/dimg/CMakeLists.txt
+++ b/core/libs/dimg/CMakeLists.txt
@@ -223,6 +223,7 @@ endif()
 
 set(libdimgloaders_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/loaders/dimgloader.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/loaders/dimgloadersettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/loaders/jpegsettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/loaders/pngsettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/loaders/tiffsettings.cpp
