And now, move all DImg Plugin export settings widgets from core to respective plugins as well. More tests are needs, and renaming classes is necessary for maintenance.

--- a/core/dplugins/dimg/jpeg/CMakeLists.txt
+++ b/core/dplugins/dimg/jpeg/CMakeLists.txt
@@ -21,6 +21,7 @@ set(dimgjpegplugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegloader.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegloader_load.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegloader_save.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/jpegsettings.cpp
 )
 
 DIGIKAM_ADD_DIMG_PLUGIN(NAME    JPEG
