rename this class

--- a/core/dplugins/dimg/jpeg/CMakeLists.txt
+++ b/core/dplugins/dimg/jpeg/CMakeLists.txt
@@ -21,7 +21,7 @@ set(dimgjpegplugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegloader.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegloader_load.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegloader_save.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/jpegsettings.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpegexportsettings.cpp
 )
 
 DIGIKAM_ADD_DIMG_PLUGIN(NAME    JPEG
