rename this class

--- a/core/dplugins/dimg/jpeg2000/CMakeLists.txt
+++ b/core/dplugins/dimg/jpeg2000/CMakeLists.txt
@@ -21,7 +21,7 @@ set(dimgjpeg2000plugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpeg2000loader.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpeg2000loader_load.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpeg2000loader_save.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/jp2ksettings.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dimgjpeg2000exportsettings.cpp
 )
 
 DIGIKAM_ADD_DIMG_PLUGIN(NAME    JPEG2000
