--- a/core/dplugins/dimg/imagemagick/CMakeLists.txt
+++ b/core/dplugins/dimg/imagemagick/CMakeLists.txt
@@ -19,6 +19,8 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLU
 set(dimgimagemagickplugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgimagemagickplugin.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgimagemagickloader.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dimgimagemagickloader_load.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dimgimagemagickloader_save.cpp
 )
 
 DIGIKAM_ADD_DIMG_PLUGIN(NAME    ImageMagick
