--- a/core/dplugins/dimg/qimage/CMakeLists.txt
+++ b/core/dplugins/dimg/qimage/CMakeLists.txt
@@ -21,6 +21,7 @@ set(dimgqimageplugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgqimageloader.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgqimageloader_load.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgqimageloader_save.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dimgjxlexportsettings.cpp
 )
 
 DIGIKAM_ADD_DIMG_PLUGIN(NAME    QImage
