--- a/core/dplugins/bqm/convert/CMakeLists.txt
+++ b/core/dplugins/bqm/convert/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 add_subdirectory(converttodng)
 add_subdirectory(converttopng)
+add_subdirectory(converttojxl)
 add_subdirectory(converttopgf)
 add_subdirectory(converttojpeg)
 add_subdirectory(converttotiff)
