AVIF support: add new Batch Queue Manager to convert in this format as JPEG-XL. Now JPEG-XL and AVIF integration in digiKam 8.0.0 is complete.

--- a/core/dplugins/bqm/convert/CMakeLists.txt
+++ b/core/dplugins/bqm/convert/CMakeLists.txt
@@ -7,6 +7,7 @@
 add_subdirectory(converttodng)
 add_subdirectory(converttopng)
 add_subdirectory(converttojxl)
+add_subdirectory(converttoavif)
 add_subdirectory(converttopgf)
 add_subdirectory(converttojpeg)
 add_subdirectory(converttotiff)
