WEBP support : add new export settings widget to tune quality and lossless parameters

--- a/core/dplugins/dimg/qimage/CMakeLists.txt
+++ b/core/dplugins/dimg/qimage/CMakeLists.txt
@@ -23,6 +23,7 @@ set(dimgqimageplugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgqimageloader_save.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgjxlexportsettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dimgavifexportsettings.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dimgwebpexportsettings.cpp
 )
 
 DIGIKAM_ADD_DIMG_PLUGIN(NAME    QImage
