--- a/core/cmake/templates/gitversion.h.cmake.in
+++ b/core/cmake/templates/gitversion.h.cmake.in
@@ -25,5 +25,6 @@
 #define DIGIKAM_GIT_VERSION_H
 
 #define GITVERSION "@MYGITVERSION@"
+#define GITBRANCH  "@MYGITBRANCH@"
 
 #endif // DIGIKAM_GIT_VERSION_H
